# querecord

./: .gitignore  README.md  package.json  readme.md
01_Cpp/03_迭代器/05_streambuf_iterator/: CMakeLists.txt
01_Cpp/04_容器/10_SC_RelationalOperators/: CMakeLists.txt  RO_array.cpp  RO_list.cpp
01_Cpp/06_工具/01_random/: 02_seed_seq.cpp  03_default_random_engine.cpp  06_uniform_int_distribution_for_cards.cpp  07_standard_uniform_distribution.cpp  09_normal_distribution_histogram.cpp  15_poisson_distribution.cpp  CMakeLists.txt
01_Cpp/ch04/: 01_认识迭代器.md  02_迭代器类型.md  03_流迭代器.md  04_迭代器适配器.md  05_迭代器运算.md  06_分配器.md  99_拓展篇.md  CMakeLists.txt
01_Cpp/ch04/01_iterator/: 02_point_as_template_parameter.cpp
01_Cpp/ch04/02_istream_iterator/: 03_read_char.cpp  CMakeLists.txt
01_Cpp/ch04/03_ostream_iterator/: CMakeLists.txt
01_Cpp/ch04/04_stream_more/: CMakeLists.txt  word.txt
01_Cpp/ch04/05_streambuf_iterator/: 02_write_bytes.cpp  03_copy_file_to_file.cpp  CMakeLists.txt
01_Cpp/ch04/07_iterator_func/: CMakeLists.txt  distance.cpp
01_Cpp/ch04/08_allocator/: CMakeLists.txt
01_Cpp/ch04/t/: 03_from_stdin.cpp  03_generate_n.cpp  03_iterator_type.cpp  03_read_bytes.cpp  03_stream_struct.cpp  06_usage.cpp  CMakeLists.txt  myallocator.h
01_Cpp/ch07/: CMakeLists.txt
01_Cpp/ch07/01_基础特性/: 01_一致性初始化.md  02_基于范围的for循环.md  03_=default和=delete.md  04_final和override关键字.md  05_constexpr使用.md  06_强枚举类型.md  07_委托构造函数和继承构造函数.md  07_继承构造和委派构造.md  08_emplace_back使用.md  09_元组.md  10_静态断言.md  11_noexcept.md  12_扩展的friend语法.md
01_Cpp/ch07/02_右值引用与移动语义/: 01_右值引用.md  02_移动语义.md  03_完美转发.md  CMakeLists.txt
01_Cpp/ch07/03_类型推导/: 01_auto关键字.md  02_decltype关键字.md  03_declval函数.md
01_Cpp/ch07/04_类型特征/: 01_integral_constant.md  02_类型特征.md  03_类型萃取.md
01_Cpp/ch07/05_类型分配/: 01_aligned_storage.md
01_Cpp/ch07/06_可调用对象/: 01_可调用对象种类.md  02_可调用对象包装器.md  03_可调用对象绑定器.md
01_Cpp/ch07/07_多线程与同步/: 01_thread.md  02_互斥量.md  03_条件变量.md  04_原子变量.md  04_原子变量和内存序.md  05_call_once.md  CMakeLists.txt  README.md  互斥包装器测试.md
01_Cpp/ch07/08_异步支持/: 01_async.md  02_future.md  03_promise.md  04_packaged_task.md
01_Cpp/ch07/09_智能指针/: 01_unique_ptr.md  02_shared_ptr.md  03_weak_ptr.md  循环引用.md
01_Cpp/ch07/10_正则匹配/: CMakeLists.txt  README.md
01_Cpp/ch07/可调用对象/: 可调用对象绑定器.md
01_Cpp/ch07/多线程与同步/: 互斥包装器测试.md
01_Cpp/ch07/异步支持/: async.md  future.md
01_Cpp/ch07/智能指针/: README.md  weak_ptr.md
01_Cpp/ch07/正则匹配/: CMakeLists.txt  regex_match.cpp
01_Cpp/ch07/类型分配/: README.md
01_Cpp/ch07/类型推导/: CMakeLists.txt
01_Cpp/ch07/类型特征/: CMakeLists.txt  类型萃取.md
01_Cpp/容器/: 01_Array.md  02_Vector.md  03_Deque.md  04_List.md  06_Stack.md  07_Queue.md  08_Priority_queue.md  09_String.md  10_SC_Heap.md  10_SC_SmartPointer.md  12_Map.md  13_Multimap.md  13_Unordered_map.md  16_Tuple.md  17_Tuple.md  18_Unordered_map.md  CMakeLists.txt  README.md  deque.md  关联容器.md  堆.md  容器迭代器.md  容器适配器.md  序列容器.md
01_Cpp/容器/01-resize/: CMakeLists.txt
01_Cpp/容器/01_Array/: 01_initialize.cpp  02_access.cpp  05_iterator.cpp  06_compare.cpp  README.md
01_Cpp/容器/02-push_back/: CMakeLists.txt  README.md  push_back.cpp
01_Cpp/容器/02_Vector/: 02_reserve.cpp  04_access.cpp  CMakeLists.txt  README.md
01_Cpp/容器/03-max_size/: CMakeLists.txt  README.md
01_Cpp/容器/03_Deque/: 03_emplace.cpp  CMakeLists.txt  README.md
01_Cpp/容器/04_List/: 01_initialize.cpp  03_remove.cpp  07_splice.cpp  CMakeLists.txt  README.md
01_Cpp/容器/05-list_sort/: list_sort.cpp
01_Cpp/容器/05_Forward_list/: 01_count.cpp  CMakeLists.txt
01_Cpp/容器/06-initialize_list/: CMakeLists.txt  README.md
01_Cpp/容器/07-string_vec/: CMakeLists.txt  string_iterator.cpp
01_Cpp/容器/07_Queue/: CMakeLists.txt
01_Cpp/容器/08-diff_12/: CMakeLists.txt  README.md
01_Cpp/容器/08_Priority_queue/: 01_initialize.cpp  CMakeLists.txt
01_Cpp/容器/08_SC_RelationalOperators/: RO_forward_list.cpp
01_Cpp/算法与函数对象/: 01_函数对象.md  02_谓词.md  03_约束与适配.md  04_01_排序.md  04_02_合并序列.md  04_03_搜索序列.md  04_05_有序查找.md  04_容器算法.md  05_容器算法.md  06_容器算法.md  CMakeLists.txt  adjacent_find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  is_sorted.cpp  readme.md  search.cpp  容器算法.md
11_Programming/信号/: CMakeLists.txt
14_DesignPattern/单例模式/: CMakeLists.txt  DoubleCheck.cpp
15_DesignPattern/24_Thread_Pool/: CMakeLists.txt  README.md
19_OpenSource/glog/: CMakeLists.txt  README.md
19_OpenSource/grpc/: .gitignore  01_安装与使用.md  02_RPC与中间件.md  CMakeLists.txt  README.md
19_OpenSource/hdf5/: CMakeLists.txt  README.md
19_OpenSource/libzmq/: CMakeLists.txt  README.md  REQ-REP模式.md  ZMQ使用事项.md  套接字选项.md  通信模式.md
19_OpenSource/mbedtls/: CMakeLists.txt  README.md
19_OpenSource/mimalloc/: CMakeLists.txt  README.md  utils.h
19_OpenSource/mongoose/: CMakeLists.txt  illustrate.c  restful_client.c  restful_server.c  restful_test.sh
19_OpenSource/ompi/: CMakeLists.txt  README.md  安装.md
19_OpenSource/pistache/: CMakeLists.txt  README.md  hello_server.cc  pistache其他版本说明.md  restful_client.cc  restful_client_d.cc  restful_server.cc  restful_server_d.cc  test.sh  文件及代码段.md  查找与问题.md
19_OpenSource/protobuf/: .gitignore  CMakeLists.txt  README.md
19_OpenSource/rapidjson/: CMakeLists.txt  README.md  bic.cpp  bic.h  efficiency.cpp  iterator.cpp  rajtest.cpp
19_OpenSource/re2/: CMakeLists.txt  README.md
19_OpenSource/restbed/: .gitignore  CMakeLists.txt  README.md  header.h
19_OpenSource/spdlog/: 01_default.cpp  02_loglevel.cpp  03_custom.cpp  04_logfile.cpp  CMakeLists.txt  README.md  pattern.md
19_OpenSource/threadpool/: CMakeLists.txt  simple.cpp
22_Software/23_pgsql/: CMakeLists.txt  pqxx安装与使用.md
22_Software/24_curl/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
25_Socket/: CMakeLists.txt  README.md
25_Socket/01_socket/: CMakeLists.txt  README.md  msgpeek_client.c  msgpeek_server.c  socket_client.c  socket_server.c
25_Socket/02_select/: CMakeLists.txt  README.md  talk_client.c  text_client.c  text_server.c
25_Socket/common/: abc.h
29_Code/timer/: CMakeLists.txt  posix_timer.h  test_drive_timer.cpp
Cpp/容器/: CMakeLists.txt  README.md  readme.md  关联容器.md  函数对象.md  容器算法.md  序列容器.md  认识容器.md
(+4839 files in other folders)
